// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when has changed 1`] = `
<div
  className="src-modules-monitor-components-venue-monitor-grid-row__container"
>
  <div
    className="src-modules-monitor-components-venue-monitor-grid-row__content"
  >
    <h2
      className="src-modules-monitor-components-venue-monitor-grid-row__title"
    >
      <a
        href="http://some/venue/homepage/url"
        rel="noopener"
        target="_blank"
      >
        Venue Openings
      </a>
    </h2>
    <div>
      <span
        className="src-modules-monitor-components-venue-monitor-grid-row__tag-changed src-modules-monitor-components-venue-monitor-grid-row__tag"
      >
        changed
      </span>
    </div>
  </div>
  <FaPencil
    className="src-modules-monitor-components-venue-monitor-grid-row__icon"
    onClick={[Function]}
    tabIndex="0"
  />
</div>
`;

exports[`should render correctly when has no url 1`] = `
<div
  className="src-modules-monitor-components-venue-monitor-grid-row__container"
>
  <div
    className="src-modules-monitor-components-venue-monitor-grid-row__content"
  >
    <h2
      className="src-modules-monitor-components-venue-monitor-grid-row__title"
    >
      <span>
        Venue Openings
      </span>
    </h2>
    <div />
  </div>
  <FaPencil
    className="src-modules-monitor-components-venue-monitor-grid-row__icon"
    onClick={[Function]}
    tabIndex="0"
  />
</div>
`;

exports[`should render correctly when has not changed 1`] = `
<div
  className="src-modules-monitor-components-venue-monitor-grid-row__container"
>
  <div
    className="src-modules-monitor-components-venue-monitor-grid-row__content"
  >
    <h2
      className="src-modules-monitor-components-venue-monitor-grid-row__title"
    >
      <a
        href="http://some/venue/homepage/url"
        rel="noopener"
        target="_blank"
      >
        Venue Openings
      </a>
    </h2>
    <div />
  </div>
  <FaPencil
    className="src-modules-monitor-components-venue-monitor-grid-row__icon"
    onClick={[Function]}
    tabIndex="0"
  />
</div>
`;

exports[`should render correctly when is ignored 1`] = `
<div
  className="src-modules-monitor-components-venue-monitor-grid-row__container"
>
  <div
    className="src-modules-monitor-components-venue-monitor-grid-row__content"
  >
    <h2
      className="src-modules-monitor-components-venue-monitor-grid-row__title"
    >
      <a
        href="http://some/venue/homepage/url"
        rel="noopener"
        target="_blank"
      >
        Venue Openings
      </a>
    </h2>
    <div>
      <span
        className="src-modules-monitor-components-venue-monitor-grid-row__tag"
      >
        ignored
      </span>
    </div>
  </div>
  <FaPencil
    className="src-modules-monitor-components-venue-monitor-grid-row__icon"
    onClick={[Function]}
    tabIndex="0"
  />
</div>
`;
